--- a/TW.Training.Vote.Domain/TW.Training.Vote.Domain.csproj
+++ b/TW.Training.Vote.Domain/TW.Training.Vote.Domain.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Voting\Entities" />
+      <Folder Include="Voting\Contracts\Out" />
     </ItemGroup>
 
     <ItemGroup>
