--- a/TW.Infrastructure.Domain/TW.Infrastructure.Domain.csproj
+++ b/TW.Infrastructure.Domain/TW.Infrastructure.Domain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\TW.Infrastructure.Core\TW.Infrastructure.Core.csproj" />
+    </ItemGroup>
+
 </Project>
