# dev for BFF VotingApiProxy logic

--- a/TW.SpringFestivalGALA2023.Web/appsettings.json
+++ b/TW.SpringFestivalGALA2023.Web/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "VotingAPI": {
+    "ProgrammeCode": "new-year-party-2026",
+    "BaseURL": "https://localhost:7161/api",
+    "EndPoints": [
+      {"Code":  "submit-voting", "Path": "/voting/{0}", "Descirption": "节目投票" },
+      {"Code":  "get-programme", "Path": "/programmes/c-{0}", "Descirption": "获取活动节信息" },
+      {"Code":  "get-programme-statistic", "Path": "/voting/{0}/statistic", "Descirption": "获取活动投票统计" },
+      {"Code":  "get-programme-fortune", "Path": "/voting/{0}/fortune", "Descirption": "获取活动投票中奖名单" }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
