--- a/TW.SpringFestivalGALA2023.Web/TW.SpringFestivalGALA2023.Web.csproj
+++ b/TW.SpringFestivalGALA2023.Web/TW.SpringFestivalGALA2023.Web.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="RestSharp" Version="107.3.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
     </ItemGroup>
 
