--- a/TW.Infrastructure.ApsNetCore/TW.Infrastructure.ApsNetCore.csproj
+++ b/TW.Infrastructure.ApsNetCore/TW.Infrastructure.ApsNetCore.csproj
@@ -22,4 +22,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\TW.Infrastructure.Core\TW.Infrastructure.Core.csproj" />
+    </ItemGroup>
+
 </Project>
