# FIX BFF request the VotingCore Fail

--- a/TW.SpringFestivalGALA2023.Web/appsettings.json
+++ b/TW.SpringFestivalGALA2023.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "VotingAPI": {
-    "ProgrammeCode": "new-year-party-2026",
+    "ProgrammeCode": "tw-2023-spring-festival-happy",
     "BaseURL": "https://localhost:7161/api",
     "EndPoints": [
       {"Code":  "submit-voting", "Path": "/voting/{0}", "Descirption": "节目投票" },
